fixed the hb -menu not popping up

--- a/css/style.css
+++ b/css/style.css
@@ -1,330 +1,1 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  background: white;
-  margin: 0;
-  padding: 0;
-}
-
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: white;
-  color: black !important;
-  font-family: "Rubik", sans-serif;
-  border-bottom: 1px solid black;
-}
-.website-logo {
-  margin: 0.5rem;
-}
-
-.navbar-elements ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
-}
-.navbar-elements li {
-  list-style: none;
-}
-.navbar-elements a {
-  text-decoration: none;
-  color: black !important;
-  padding: 1rem;
-  display: block;
-  font-size: 1.2rem;
-  transition: 0.1s;
-}
-.navbar-elements a:hover {
-  color: #c0c0c0;
-  font-size: 1.3rem;
-}
-.hamburger-menu {
-  position: absolute;
-  top: 1.5rem;
-  right: 1rem;
-  display: none;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 30px;
-  height: 21px;
-}
-.hamburger-menu .bar {
-  height: 2px;
-  width: 100%;
-  background-color: black;
-  border-radius: 10px;
-}
-
-
-@media (max-width: 600px) {
-  .hamburger-menu {
-    display: flex;
-  }
-  .navbar-elements {
-    display: none;
-    width: 100%;
-  }
-  .banner h1 {
-    text-align: center;
-    font-size: 35px;
-    font-weight: bold;
-    position: relative;
-    padding: 0px;
-    padding-top: 10px;
-    font-family: "Josefin Sans", sans-serif;
-    white-space: nowrap;
-    opacity: 1;
-  }
-  .navbar {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  .navbar-elements ul {
-    width: 100%;
-    flex-direction: column;
-    border-top: 1px solid black;
-  }
-  .navbar-elements li {
-    text-align: center;
-    font-size: 1.2rem;
-  }
-  .navbar-elements li:hover {
-    font-size: 1.5rem;
-  }
-  .navbar-elements li a {
-    padding: 0.5rem 1rem;
-  }
-  .navbar-elements.active {
-    display: flex;
-  }
-  .banner p {
-    margin-bottom: 0;
-    padding-top: 25px;
-    padding-bottom: 0 !important;
-  }
-  .scroll--banner{
-    margin-top: 0;
-    font-size: 1.2rem !important;
-  }
-}
-section div {
-  padding: 1px;
-}
-body::-webkit-scrollbar {
-  background-color: #cce6f4;
-  width: 16px;
-}
-body::-webkit-scrollbar-track {
-  background-color: #cce6f4;
-}
-body::-webkit-scrollbar-thumb {
-  background-color: #a0a5a6;
-  border-radius: 16px;
-  border: 4px solid #cce6f4;
-}
-
-ul {
-  display: inline;
-}
-ul li {
-  list-style: none;
-  display: inline;
-}
-
-body {
-  background-image: url("../img/banner-reducedopacity.jpg");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: top;
-  width: 100%;
-  margin: 0 auto;
-  padding: 0;
-}
-.scroll--banner {
-  padding: 20px;
-  padding-bottom: 0px !important;
-  text-align: center;
-  transition: 0.3s;
-  margin-top: 5vh;
-}
-.scroll--banner:hover {
-  font-size: 1.5em;
-}
-
-.banner h1 {
-  text-align: center;
-  font-size: 40px;
-  font-weight: bold;
-  position: relative;
-  padding: 0px;
-  padding-top: 10px;
-  padding-bottom: 0px;
-  font-family: "Rubik", sans-serif;
-  white-space: nowrap;
-  opacity: 1;
-  margin-bottom: 10vh;
-}
-.banner p {
-  margin-bottom: 3vh;
-
-}
-.section__subtitle {
-  text-align: center;
-  font-size: 40px;
-  font-weight: bolder;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  font-family: "Caveat", cursive;
-  opacity: 1;
-  line-height: 50px;
-}
-.section__subtitle--scroll {
-  text-align: center;
-  font-size: 30px;
-  font-weight: bolder;
-  padding: 30px;
-  padding-bottom: 0.5rem;
-  font-family: "Rubik", sans-serif;
-  opacity: 1;
-}
-
-.hr-banner {
-  border: 1px double #457eac;
-  border-radius: 5px;
-  width: 50%;
-  margin: 0 auto;
-}
-
-footer {
-  position: relative;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  border-top: 1px solid black;
-  background-color: white;
-  color: black;
-}
-
-.contacts ul {
-  display: inline;
-  list-style-type: none;
-}
-
-.contacts {
-  padding: 20px;
-  text-align: center;
-}
-
-.social__list__link {
-  padding: 10px;
-}
-.social__list--item i{
- transition: 0.3s;
-}
-.social__list--item:hover {
-  padding: 15px;
-}
-
-.social__list--item:hover i {
-  padding-bottom: 5px;
-  border-bottom: 1px solid black;
-}
-
-.social__list {
-  font-family: "Rubik", sans-serif;
-}
-.banner__img {
-  max-width: 100%;
-  height: auto;
-  margin: 0 auto;
-}
-
-.footer-text {
-  padding: 10px;
-  padding-bottom: 5px;
-  font-family: "Amatic SC", cursive;
-  font-size: x-large;
-}
-
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(auto, minmax(300px, 1fr));
-}
-.gallery img {
-  width: 100%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  padding: 20px;
-}
-
-.gallery--intro {
-  font-family: "Montserrat", sans-serif;
-  text-align: center;
-  padding: 15px;
-}
-.gallery--intro p{
-  font-family: "Montserrat", sans-serif;
-  text-align: center;
-  font-size: 20px;
-  padding: 15px;
-}
-
-.gallery--end {
-  font-family: "Montserrat", sans-serif;
-  text-align: center;
-  padding: 15px;
-}
-
-.gallery-home {
-  background-color: #e5ece9;
-  padding: 20px !important;
-  color: black;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin: 15px !important;
-  font-family: "Rubik", sans-serif;
-  text-align: center;
-}
-
-.section__subtitle--gallery {
-  font-family: "Montserrat", sans-serif;
-  text-align: center;
-  font-size: 25px;
-  font-weight: bold;
-  padding: 15px;
-}
-.fa-hand-peace{
-  padding-bottom: 0;
-}
-.section__subtitle--gallery--link {
-  padding: 20px !important;
-  font-size: 1.5rem !important;
-}
-
-.section__subtitle--gallery--link:hover {
-  font-size: 2rem !important;
-}
-
-.section__subtitle--gallery a {
-  text-decoration: none;
-  color: black;
-}
-
-.home--gallery {
-  padding-bottom: 9.5rem;
-}
-.home--gallery img {
-  padding: 5px;
-  float: left;
-  width: 50%;
-  height: 100%;
-}
+*{box-sizing:border-box;margin:0;padding:0}html{scroll-behavior:smooth}body{background:#fff;margin:0;padding:0}.navbar{display:flex;justify-content:space-between;align-items:center;background-color:#fff;color:#000!important;font-family:Rubik,sans-serif;border-bottom:1px solid #000}.website-logo{margin:.5rem}.navbar-elements ul{margin:0;padding:0;display:flex}.navbar-elements li{list-style:none}.navbar-elements a{text-decoration:none;color:#000!important;padding:1rem;display:block;font-size:1.2rem;transition:.1s}.navbar-elements a:hover{color:silver;font-size:1.3rem}.hamburger-menu{position:absolute;top:1.5rem;right:1rem;display:none;flex-direction:column;justify-content:space-between;width:30px;height:21px}.hamburger-menu .bar{height:2px;width:100%;background-color:#000;border-radius:10px}@media (max-width:600px){.hamburger-menu{display:flex}.navbar-elements{display:none;width:100%}.banner h1{text-align:center;font-size:35px;font-weight:700;position:relative;padding:0;padding-top:10px;font-family:"Josefin Sans",sans-serif;white-space:nowrap;opacity:1}.navbar{flex-direction:column;align-items:flex-start}.navbar-elements ul{width:100%;flex-direction:column;border-top:1px solid #000}.navbar-elements li{text-align:center;font-size:1.2rem}.navbar-elements li:hover{font-size:1.5rem}.navbar-elements li a{padding:.5rem 1rem}.navbar-elements.active{display:flex}.banner p{margin-bottom:0;padding-top:25px;padding-bottom:0!important}.scroll--banner{margin-top:0;font-size:1.2rem!important}}section div{padding:1px}body::-webkit-scrollbar{background-color:#cce6f4;width:16px}body::-webkit-scrollbar-track{background-color:#cce6f4}body::-webkit-scrollbar-thumb{background-color:#a0a5a6;border-radius:16px;border:4px solid #cce6f4}ul{display:inline}ul li{list-style:none;display:inline}body{background-image:url(../img/banner-reducedopacity.jpg);background-repeat:no-repeat;background-position:center center;background-attachment:fixed;background-size:cover;background-position:top;width:100%;margin:0 auto;padding:0}.scroll--banner{padding:20px;padding-bottom:0!important;text-align:center;transition:.3s;margin-top:5vh}.scroll--banner:hover{font-size:1.5em}.banner h1{text-align:center;font-size:40px;font-weight:700;position:relative;padding:0;padding-top:10px;padding-bottom:0;font-family:Rubik,sans-serif;white-space:nowrap;opacity:1;margin-bottom:10vh}.banner p{margin-bottom:3vh}.section__subtitle{text-align:center;font-size:40px;font-weight:bolder;padding-top:50px;padding-bottom:50px;font-family:Caveat,cursive;opacity:1;line-height:50px}.section__subtitle--scroll{text-align:center;font-size:30px;font-weight:bolder;padding:30px;padding-bottom:.5rem;font-family:Rubik,sans-serif;opacity:1}.hr-banner{border:1px double #457eac;border-radius:5px;width:50%;margin:0 auto}footer{position:relative;left:0;bottom:0;width:100%;border-top:1px solid #000;background-color:#fff;color:#000}.contacts ul{display:inline;list-style-type:none}.contacts{padding:20px;text-align:center}.social__list__link{padding:10px}.social__list--item i{transition:.3s}.social__list--item:hover{padding:15px}.social__list--item:hover i{padding-bottom:5px;border-bottom:1px solid #000}.social__list{font-family:Rubik,sans-serif}.banner__img{max-width:100%;height:auto;margin:0 auto}.footer-text{padding:10px;padding-bottom:5px;font-family:"Amatic SC",cursive;font-size:x-large}.gallery{display:grid;grid-template-columns:repeat(auto,minmax(300px,1fr))}.gallery img{width:100%;box-shadow:0 4px 8px 0 rgba(0,0,0,.2),0 6px 20px 0 rgba(0,0,0,.19);padding:20px}.gallery--intro{font-family:Montserrat,sans-serif;text-align:center;padding:15px}.gallery--intro p{font-family:Montserrat,sans-serif;text-align:center;font-size:20px;padding:15px}.gallery--end{font-family:Montserrat,sans-serif;text-align:center;padding:15px}.gallery-home{background-color:#e5ece9;padding:20px!important;color:#000;box-shadow:0 4px 8px 0 rgba(0,0,0,.2),0 6px 20px 0 rgba(0,0,0,.19);margin:15px!important;font-family:Rubik,sans-serif;text-align:center}.section__subtitle--gallery{font-family:Montserrat,sans-serif;text-align:center;font-size:25px;font-weight:700;padding:15px}.fa-hand-peace{padding-bottom:0}.section__subtitle--gallery--link{padding:20px!important;font-size:1.5rem!important}.section__subtitle--gallery--link:hover{font-size:2rem!important}.section__subtitle--gallery a{text-decoration:none;color:#000}.home--gallery{padding-bottom:9.5rem}.home--gallery img{padding:5px;float:left;width:50%;height:100%}
