Made some changes

--- a/css/about.css
+++ b/css/about.css
@@ -55,18 +55,15 @@ body {
   height: 100vh;
 }
 .img img {
-  width: 100%;
+  width: 80%;
   align-content: space-around;
+  border-radius: 8%;
 }
 .img {
   margin-top: 22vh;
   width: 200rem;
   flex-grow: 2;
   margin-left: 2vh;
-}
-.img:hover img {
-  border-style: groove;
-  border-radius: 8px;
 }
 .text {
   margin-top: 15vh;
@@ -94,14 +91,14 @@ body {
 }
 .text h1 {
   text-align: center;
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
 }
 .text p {
   font-family: Oxygen, sans-serif;
   margin-right: 10px;
   margin-left: 20px;
 }
-@media (max-width: 700px) {
+@media (max-width: 1200px) {
   .body__about {
     display: flex;
     flex-direction: column;
@@ -112,19 +109,24 @@ body {
   .img img {
     width: 100%;
     max-width: 200px;
-    margin-top: -10vh;
     margin-left: auto;
+    margin-right: auto;
     height: auto;
-    border: none;
+    border-radius: 8%;
+  }
+  .img p {
+    text-align: center;
   }
   .img {
     width: 50%;
     margin: auto;
-    margin-top: 15vh;
+    margin-top: 5vh;
+    margin-bottom: 2vh;
   }
   .text {
     margin: 2vh;
     margin-left: 20px;
+    margin-top: 0 !important;
     font-size: x-large;
   }
   .icons {
@@ -134,20 +136,5 @@ body {
     padding: 10px;
     font-size: medium;
     color: #000;
-  }
-}
-@media (min-width: 1100px) {
-  .more {
-    margin-left: 75vh;
-  }
-}
-@media (min-width: 1300px) {
-  .more {
-    margin-left: 95vh;
-  }
-}
-@media (max-width: 600px) {
-  .more {
-    margin-left: 10vh;
   }
 }
