--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,1 +1,105 @@
-*{box-sizing:border-box;margin:0;padding:0}body{background-color:#0e131f;color:#fff}.bodyelements{width:400px;height:0;text-align:center;position:absolute;top:0;bottom:0;left:100px;right:0;color:#fff;margin:auto}.bodyh_one{width:500px;height:200px;text-align:center;position:absolute;top:0;bottom:0;left:10px;right:0;color:#fff;margin:auto;font-family:Rubik,sans-serif;font-size:500}.social li{display:inline;float:left;margin:10px}.social ul{display:inline}.social li{left:100px!important}.hover__element{color:#f5f5f5;display:none;padding:1.5vh;background-color:#282f44;margin-top:10px;border-radius:25px;font-family:Rubik,sans-serif}.social__list--item:hover i{transform:scale(1.2);color:silver!important;transition:.5s}.social__list--item:hover>.hover__element{display:block}@media (max-width:600px){.bodyelements{width:350px;height:0;text-align:center;position:absolute;top:0;bottom:0;left:50px;right:0;color:#fff;margin:auto}.bodyh_one{width:300px;height:200px;text-align:center;position:absolute;top:0;bottom:0;left:10px;right:0;color:#fff;margin:auto;font-family:Rubik,sans-serif;font-size:small}.social li{display:inline;float:left;margin:10px}.hover__element{color:#f5f5f5;display:none;padding:1vh;background-color:#282f44;margin-top:10px;border-radius:25px;font-family:Rubik,sans-serif}}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body {
+  background-color: #0e131f;
+  color: #fff;
+}
+.bodyelements {
+  width: 400px;
+  height: 0;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 100px;
+  right: 0;
+  color: #fff;
+  margin: auto;
+}
+.bodyh_one {
+  width: 500px;
+  height: 200px;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 10px;
+  right: 0;
+  color: #fff;
+  margin: auto;
+  font-family: Rubik, sans-serif;
+  font-size: 500;
+}
+.social li {
+  display: inline;
+  float: left;
+  margin: 10px;
+}
+.social ul {
+  display: inline;
+}
+.social li {
+  left: 100px !important;
+}
+.hover__element {
+  color: #f5f5f5;
+  display: none;
+  padding: 1.5vh;
+  background-color: #282f44;
+  margin-top: 10px;
+  border-radius: 25px;
+  font-family: Rubik, sans-serif;
+}
+.social__list--item:hover i {
+  transform: scale(1.2);
+  color: silver !important;
+  transition: 0.5s;
+}
+.social__list--item:hover > .hover__element {
+  display: block;
+}
+@media (max-width: 600px) {
+  .bodyelements {
+    width: 350px;
+    height: 0;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 50px;
+    right: 0;
+    color: #fff;
+    margin: auto;
+  }
+  .bodyh_one {
+    width: 300px;
+    height: 200px;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 10px;
+    right: 0;
+    color: #fff;
+    margin: auto;
+    font-family: Rubik, sans-serif;
+    font-size: small;
+  }
+  .social li {
+    display: inline;
+    float: left;
+    margin: 10px;
+  }
+  .hover__element {
+    color: #f5f5f5;
+    display: none;
+    padding: 1vh;
+    background-color: #282f44;
+    margin-top: 10px;
+    border-radius: 25px;
+    font-family: Rubik, sans-serif;
+  }
+}
