Made some changes

--- a/css/about.css
+++ b/css/about.css
@@ -109,6 +109,7 @@ body {
   .img img {
     width: 100%;
     max-width: 200px;
+    margin-top: 2vh;
     margin-left: auto;
     margin-right: auto;
     height: auto;
