--- a/css/about.css
+++ b/css/about.css
@@ -122,7 +122,7 @@ body {
     width: 50%;
     margin: auto;
     margin-top: 5vh;
-    margin-bottom: 0.25px;
+    margin-bottom: 0.25vh;
   }
   .text {
     margin: 2vh;
